--- a/src/styles/scss/_base.scss
+++ b/src/styles/scss/_base.scss
@@ -39,6 +39,8 @@ body {
   .Home .show-more p,
   .GitHubBtn a p,
   .Blog .search-posts,
+  .Blog .search-posts input,
+  .BlogPost .back-icon,
   .BlogItem .title-views h3,
   .ProjectItem .project-content .project-title,
   .ProjectItem .project-img,
